@@ -24,7 +24,7 @@ class MongoDB {
         }
     }
 
-    fun readAllTasks(): Flow<RequestState<List<ToDoTask>>> {
+    fun readActiveTasks(): Flow<RequestState<List<ToDoTask>>> {
         return realm?.query<ToDoTask>(query = "completed == $0", false)
             ?.asFlow()
             ?.map { result ->
